P5/y.output
Estado 162 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: MAIN PARIZQ PARDER $@1 bloque

    3 $@2: %empty

    4 $@3: %empty

    5 $@4: %empty

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 declar_de_subprogs $@4 sentencias FINBLOQUE

    7 declar_de_variables_locales: VAR INIBLOQUE variables_locales FINBLOQUE
    8                            | VAR INIBLOQUE FINBLOQUE
    9                            | %empty

   10 variables_locales: variables_locales cuerpo_declar_variables
   11                  | cuerpo_declar_variables

   12 $@5: %empty

   13 cuerpo_declar_variables: TIPO $@5 lista_variables PYC
   14                        | error

   15 lista_variables: ID COMA lista_variables
   16                | ID

   17 declar_de_subprogs: declar_de_subprogs declar_subprog
   18                   | %empty

   19 $@6: %empty

   20 declar_subprog: cabecera_subprog $@6 bloque

   21 $@7: %empty

   22 cabecera_subprog: TIPO ID $@7 PARIZQ cabecera_argumentos PARDER

   23 cabecera_argumentos: parametros
   24                    | %empty
   25                    | error

   26 parametros: parametros COMA parametro
   27           | parametro

   28 parametro: TIPO ID

   29 $@8: %empty

   30 sentencias: sentencias $@8 sentencia
   31           | %empty

   32 sentencia: bloque
   33          | expresion PYC
   34          | sentencia_asignacion
   35          | sentencia_lista
   36          | sentencia_if
   37          | sentencia_while
   38          | sentencia_entrada
   39          | sentencia_salida
   40          | sentencia_do_until
   41          | sentencia_return

   42 sentencia_asignacion: ID ASIGN expresion PYC

   43 sentencia_lista: expresion OPERLISTA PYC
   44                | DOLLAR expresion PYC

   45 $@9: %empty

   46 $@10: %empty

   47 $@11: %empty

   48 $@12: %empty

   49 sentencia_if: IF PARIZQ $@9 expresion $@10 PARDER $@11 sentencia $@12 bloque_else

   50 $@13: %empty

   51 bloque_else: ELSE $@13 sentencia
   52            | %empty

   53 $@14: %empty

   54 $@15: %empty

   55 sentencia_while: WHILE PARIZQ $@14 expresion $@15 PARDER sentencia

   56 $@16: %empty

   57 $@17: %empty

   58 $@18: %empty

   59 sentencia_do_until: REPEAT $@16 sentencia $@17 UNTIL PARIZQ expresion $@18 PARDER PYC

   60 sentencia_entrada: INPUT lista_id PYC

   61 lista_id: lista_id COMA id_cin
   62         | id_cin

   63 id_cin: ID

   64 sentencia_salida: OUTPUT lista_expresiones_o_cadena PYC

   65 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_cout
   66                           | expresion_cout

   67 expresion_cout: expresion_cadena

   68 expresion_cadena: expresion
   69                 | CADENA

   70 sentencia_return: RETURN expresion PYC

   71 expresion: PARIZQ expresion PARDER
   72          | MASMENOS expresion
   73          | EXCL expresion
   74          | INTHASH expresion
   75          | expresion ARROBA expresion
   76          | expresion ANDLOG expresion
   77          | expresion ORLOG expresion
   78          | expresion EQN expresion
   79          | expresion MASMENOS expresion
   80          | expresion MULDIV expresion
   81          | expresion PORPOR expresion
   82          | expresion BORRLIST expresion
   83          | expresion REL expresion
   84          | expresion MASMAS expresion ARROBA expresion
   85          | llamada_funcion
   86          | ID
   87          | constante
   88          | error

   89 llamada_funcion: ID PARIZQ argumentos PARDER

   90 argumentos: lista_argumentos
   91           | %empty

   92 lista_argumentos: lista_argumentos COMA expresion
   93                 | expresion

   94 constante: CONST
   95          | lista

   96 lista: CORIZQ lista_expresiones CORDER

   97 lista_expresiones: lista_expresiones COMA expresion
   98                  | expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 14 25 88
    MAIN (258) 2
    VAR (259) 7 8
    TIPO (260) 13 22 28
    PYC (261) 13 33 42 43 44 59 60 64 70
    INPUT (262) 60
    OUTPUT (263) 64
    CADENA (264) 69
    RETURN (265) 70
    IF (266) 49
    ELSE (267) 51
    REPEAT (268) 59
    UNTIL (269) 59
    WHILE (270) 55
    OPERLISTA (271) 43
    CONST (272) 94
    INIBLOQUE (273) 6 7 8
    FINBLOQUE (274) 6 7 8
    CORIZQ (275) 96
    CORDER (276) 96
    COMA (277) 15 26 61 65 92 97
    ASIGN (278) 42
    PARDER (279) 2 22 49 55 59 71 89
    PARIZQ (280) 2 22 49 55 59 71 89
    DOLLAR (281) 44
    ID (282) 15 16 22 28 42 63 86 89
    MASMAS (283) 84
    ARROBA (284) 75 84
    ORLOG (285) 77
    ANDLOG (286) 76
    EQN (287) 78
    REL (288) 83
    PORPOR (289) 81
    BORRLIST (290) 82
    MASMENOS (291) 72 79
    MULDIV (292) 80
    INTHASH (293) 74
    EXCL (294) 73


No terminales con las reglas donde aparecen

    $accept (40)
        on left: 0
    programa (41)
        on left: 2
        on right: 0
    $@1 (42)
        on left: 1
        on right: 2
    bloque (43)
        on left: 6
        on right: 2 20 32
    $@2 (44)
        on left: 3
        on right: 6
    $@3 (45)
        on left: 4
        on right: 6
    $@4 (46)
        on left: 5
        on right: 6
    declar_de_variables_locales (47)
        on left: 7 8 9
        on right: 6
    variables_locales (48)
        on left: 10 11
        on right: 7 10
    cuerpo_declar_variables (49)
        on left: 13 14
        on right: 10 11
    $@5 (50)
        on left: 12
        on right: 13
    lista_variables (51)
        on left: 15 16
        on right: 13 15
    declar_de_subprogs (52)
        on left: 17 18
        on right: 6 17
    declar_subprog (53)
        on left: 20
        on right: 17
    $@6 (54)
        on left: 19
        on right: 20
    cabecera_subprog (55)
        on left: 22
        on right: 20
    $@7 (56)
        on left: 21
        on right: 22
    cabecera_argumentos (57)
        on left: 23 24 25
        on right: 22
    parametros (58)
        on left: 26 27
        on right: 23 26
    parametro (59)
        on left: 28
        on right: 26 27
    sentencias (60)
        on left: 30 31
        on right: 6 30
    $@8 (61)
        on left: 29
        on right: 30
    sentencia (62)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 30 49 51 55 59
    sentencia_asignacion (63)
        on left: 42
        on right: 34
    sentencia_lista (64)
        on left: 43 44
        on right: 35
    sentencia_if (65)
        on left: 49
        on right: 36
    $@9 (66)
        on left: 45
        on right: 49
    $@10 (67)
        on left: 46
        on right: 49
    $@11 (68)
        on left: 47
        on right: 49
    $@12 (69)
        on left: 48
        on right: 49
    bloque_else (70)
        on left: 51 52
        on right: 49
    $@13 (71)
        on left: 50
        on right: 51
    sentencia_while (72)
        on left: 55
        on right: 37
    $@14 (73)
        on left: 53
        on right: 55
    $@15 (74)
        on left: 54
        on right: 55
    sentencia_do_until (75)
        on left: 59
        on right: 40
    $@16 (76)
        on left: 56
        on right: 59
    $@17 (77)
        on left: 57
        on right: 59
    $@18 (78)
        on left: 58
        on right: 59
    sentencia_entrada (79)
        on left: 60
        on right: 38
    lista_id (80)
        on left: 61 62
        on right: 60 61
    id_cin (81)
        on left: 63
        on right: 61 62
    sentencia_salida (82)
        on left: 64
        on right: 39
    lista_expresiones_o_cadena (83)
        on left: 65 66
        on right: 64 65
    expresion_cout (84)
        on left: 67
        on right: 65 66
    expresion_cadena (85)
        on left: 68 69
        on right: 67
    sentencia_return (86)
        on left: 70
        on right: 41
    expresion (87)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 33 42 43 44 49 55 59 68 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 92 93 97 98
    llamada_funcion (88)
        on left: 89
        on right: 85
    argumentos (89)
        on left: 90 91
        on right: 89
    lista_argumentos (90)
        on left: 92 93
        on right: 90 92
    constante (91)
        on left: 94 95
        on right: 87
    lista (92)
        on left: 96
        on right: 95
    lista_expresiones (93)
        on left: 97 98
        on right: 96 97


Estado 0

    0 $accept: . programa $end

    MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    2 programa: MAIN . PARIZQ PARDER $@1 bloque

    PARIZQ  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    2 programa: MAIN PARIZQ . PARDER $@1 bloque

    PARDER  desplazar e ir al estado 5


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    2 programa: MAIN PARIZQ PARDER . $@1 bloque

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 6


Estado 6

    2 programa: MAIN PARIZQ PARDER $@1 . bloque

    INIBLOQUE  desplazar e ir al estado 7

    bloque  ir al estado 8


Estado 7

    6 bloque: INIBLOQUE . $@2 declar_de_variables_locales $@3 declar_de_subprogs $@4 sentencias FINBLOQUE

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 9


Estado 8

    2 programa: MAIN PARIZQ PARDER $@1 bloque .

    $default  reduce usando la regla 2 (programa)


Estado 9

    6 bloque: INIBLOQUE $@2 . declar_de_variables_locales $@3 declar_de_subprogs $@4 sentencias FINBLOQUE

    VAR  desplazar e ir al estado 10

    $default  reduce usando la regla 9 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 11


Estado 10

    7 declar_de_variables_locales: VAR . INIBLOQUE variables_locales FINBLOQUE
    8                            | VAR . INIBLOQUE FINBLOQUE

    INIBLOQUE  desplazar e ir al estado 12


Estado 11

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales . $@3 declar_de_subprogs $@4 sentencias FINBLOQUE

    $default  reduce usando la regla 4 ($@3)

    $@3  ir al estado 13


Estado 12

    7 declar_de_variables_locales: VAR INIBLOQUE . variables_locales FINBLOQUE
    8                            | VAR INIBLOQUE . FINBLOQUE

    error      desplazar e ir al estado 14
    TIPO       desplazar e ir al estado 15
    FINBLOQUE  desplazar e ir al estado 16

    variables_locales        ir al estado 17
    cuerpo_declar_variables  ir al estado 18


Estado 13

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 . declar_de_subprogs $@4 sentencias FINBLOQUE

    $default  reduce usando la regla 18 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 19


Estado 14

   14 cuerpo_declar_variables: error .

    $default  reduce usando la regla 14 (cuerpo_declar_variables)


Estado 15

   13 cuerpo_declar_variables: TIPO . $@5 lista_variables PYC

    $default  reduce usando la regla 12 ($@5)

    $@5  ir al estado 20


Estado 16

    8 declar_de_variables_locales: VAR INIBLOQUE FINBLOQUE .

    $default  reduce usando la regla 8 (declar_de_variables_locales)


Estado 17

    7 declar_de_variables_locales: VAR INIBLOQUE variables_locales . FINBLOQUE
   10 variables_locales: variables_locales . cuerpo_declar_variables

    error      desplazar e ir al estado 14
    TIPO       desplazar e ir al estado 15
    FINBLOQUE  desplazar e ir al estado 21

    cuerpo_declar_variables  ir al estado 22


Estado 18

   11 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 11 (variables_locales)


Estado 19

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 declar_de_subprogs . $@4 sentencias FINBLOQUE
   17 declar_de_subprogs: declar_de_subprogs . declar_subprog

    TIPO  desplazar e ir al estado 23

    $default  reduce usando la regla 5 ($@4)

    $@4               ir al estado 24
    declar_subprog    ir al estado 25
    cabecera_subprog  ir al estado 26


Estado 20

   13 cuerpo_declar_variables: TIPO $@5 . lista_variables PYC

    ID  desplazar e ir al estado 27

    lista_variables  ir al estado 28


Estado 21

    7 declar_de_variables_locales: VAR INIBLOQUE variables_locales FINBLOQUE .

    $default  reduce usando la regla 7 (declar_de_variables_locales)


Estado 22

   10 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 10 (variables_locales)


Estado 23

   22 cabecera_subprog: TIPO . ID $@7 PARIZQ cabecera_argumentos PARDER

    ID  desplazar e ir al estado 29


Estado 24

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 declar_de_subprogs $@4 . sentencias FINBLOQUE

    $default  reduce usando la regla 31 (sentencias)

    sentencias  ir al estado 30


Estado 25

   17 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce usando la regla 17 (declar_de_subprogs)


Estado 26

   20 declar_subprog: cabecera_subprog . $@6 bloque

    $default  reduce usando la regla 19 ($@6)

    $@6  ir al estado 31


Estado 27

   15 lista_variables: ID . COMA lista_variables
   16                | ID .

    COMA  desplazar e ir al estado 32

    $default  reduce usando la regla 16 (lista_variables)


Estado 28

   13 cuerpo_declar_variables: TIPO $@5 lista_variables . PYC

    PYC  desplazar e ir al estado 33


Estado 29

   22 cabecera_subprog: TIPO ID . $@7 PARIZQ cabecera_argumentos PARDER

    $default  reduce usando la regla 21 ($@7)

    $@7  ir al estado 34


Estado 30

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 declar_de_subprogs $@4 sentencias . FINBLOQUE
   30 sentencias: sentencias . $@8 sentencia

    FINBLOQUE  desplazar e ir al estado 35

    $default  reduce usando la regla 29 ($@8)

    $@8  ir al estado 36


Estado 31

   20 declar_subprog: cabecera_subprog $@6 . bloque

    INIBLOQUE  desplazar e ir al estado 7

    bloque  ir al estado 37


Estado 32

   15 lista_variables: ID COMA . lista_variables

    ID  desplazar e ir al estado 27

    lista_variables  ir al estado 38


Estado 33

   13 cuerpo_declar_variables: TIPO $@5 lista_variables PYC .

    $default  reduce usando la regla 13 (cuerpo_declar_variables)


Estado 34

   22 cabecera_subprog: TIPO ID $@7 . PARIZQ cabecera_argumentos PARDER

    PARIZQ  desplazar e ir al estado 39


Estado 35

    6 bloque: INIBLOQUE $@2 declar_de_variables_locales $@3 declar_de_subprogs $@4 sentencias FINBLOQUE .

    $default  reduce usando la regla 6 (bloque)


Estado 36

   30 sentencias: sentencias $@8 . sentencia

    error      desplazar e ir al estado 40
    INPUT      desplazar e ir al estado 41
    OUTPUT     desplazar e ir al estado 42
    RETURN     desplazar e ir al estado 43
    IF         desplazar e ir al estado 44
    REPEAT     desplazar e ir al estado 45
    WHILE      desplazar e ir al estado 46
    CONST      desplazar e ir al estado 47
    INIBLOQUE  desplazar e ir al estado 7
    CORIZQ     desplazar e ir al estado 48
    PARIZQ     desplazar e ir al estado 49
    DOLLAR     desplazar e ir al estado 50
    ID         desplazar e ir al estado 51
    MASMENOS   desplazar e ir al estado 52
    INTHASH    desplazar e ir al estado 53
    EXCL       desplazar e ir al estado 54

    bloque                ir al estado 55
    sentencia             ir al estado 56
    sentencia_asignacion  ir al estado 57
    sentencia_lista       ir al estado 58
    sentencia_if          ir al estado 59
    sentencia_while       ir al estado 60
    sentencia_do_until    ir al estado 61
    sentencia_entrada     ir al estado 62
    sentencia_salida      ir al estado 63
    sentencia_return      ir al estado 64
    expresion             ir al estado 65
    llamada_funcion       ir al estado 66
    constante             ir al estado 67
    lista                 ir al estado 68


Estado 37

   20 declar_subprog: cabecera_subprog $@6 bloque .

    $default  reduce usando la regla 20 (declar_subprog)


Estado 38

   15 lista_variables: ID COMA lista_variables .

    $default  reduce usando la regla 15 (lista_variables)


Estado 39

   22 cabecera_subprog: TIPO ID $@7 PARIZQ . cabecera_argumentos PARDER

    error  desplazar e ir al estado 69
    TIPO   desplazar e ir al estado 70

    PARDER  reduce usando la regla 24 (cabecera_argumentos)

    cabecera_argumentos  ir al estado 71
    parametros           ir al estado 72
    parametro            ir al estado 73


Estado 40

   88 expresion: error .

    $default  reduce usando la regla 88 (expresion)


Estado 41

   60 sentencia_entrada: INPUT . lista_id PYC

    ID  desplazar e ir al estado 74

    lista_id  ir al estado 75
    id_cin    ir al estado 76


Estado 42

   64 sentencia_salida: OUTPUT . lista_expresiones_o_cadena PYC

    error     desplazar e ir al estado 40
    CADENA    desplazar e ir al estado 77
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    lista_expresiones_o_cadena  ir al estado 79
    expresion_cout              ir al estado 80
    expresion_cadena            ir al estado 81
    expresion                   ir al estado 82
    llamada_funcion             ir al estado 66
    constante                   ir al estado 67
    lista                       ir al estado 68


Estado 43

   70 sentencia_return: RETURN . expresion PYC

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 83
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 44

   49 sentencia_if: IF . PARIZQ $@9 expresion $@10 PARDER $@11 sentencia $@12 bloque_else

    PARIZQ  desplazar e ir al estado 84


Estado 45

   59 sentencia_do_until: REPEAT . $@16 sentencia $@17 UNTIL PARIZQ expresion $@18 PARDER PYC

    $default  reduce usando la regla 56 ($@16)

    $@16  ir al estado 85


Estado 46

   55 sentencia_while: WHILE . PARIZQ $@14 expresion $@15 PARDER sentencia

    PARIZQ  desplazar e ir al estado 86


Estado 47

   94 constante: CONST .

    $default  reduce usando la regla 94 (constante)


Estado 48

   96 lista: CORIZQ . lista_expresiones CORDER

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion          ir al estado 87
    llamada_funcion    ir al estado 66
    constante          ir al estado 67
    lista              ir al estado 68
    lista_expresiones  ir al estado 88


Estado 49

   71 expresion: PARIZQ . expresion PARDER

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 89
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 50

   44 sentencia_lista: DOLLAR . expresion PYC

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 90
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 51

   42 sentencia_asignacion: ID . ASIGN expresion PYC
   86 expresion: ID .
   89 llamada_funcion: ID . PARIZQ argumentos PARDER

    ASIGN   desplazar e ir al estado 91
    PARIZQ  desplazar e ir al estado 92

    $default  reduce usando la regla 86 (expresion)


Estado 52

   72 expresion: MASMENOS . expresion

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 93
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 53

   74 expresion: INTHASH . expresion

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 94
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 54

   73 expresion: EXCL . expresion

    error     desplazar e ir al estado 40
    CONST     desplazar e ir al estado 47
    CORIZQ    desplazar e ir al estado 48
    PARIZQ    desplazar e ir al estado 49
    ID        desplazar e ir al estado 78
    MASMENOS  desplazar e ir al estado 52
    INTHASH   desplazar e ir al estado 53
    EXCL      desplazar e ir al estado 54

    expresion        ir al estado 95
    llamada_funcion  ir al estado 66
    constante        ir al estado 67
    lista            ir al estado 68


Estado 55

   32 sentencia: bloque .

    $default  reduce usando la regla 32 (sentencia)


Estado 56

   30 sentencias: sentencias $@8 sentencia .

    $default  reduce usando la regla 30 (sentencias)


Estado 57

   34 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 34 (sentencia)


Estado 58

   35 sentencia: sentencia_lista .

    $default  reduce usando la regla 35 (sentencia)


Estado 59

   36 sentencia: sentencia_if .

    $default  reduce usando la regla 36 (sentencia)


Estado 60

   37 sentencia: sentencia_while .

    $default  reduce usando la regla 37 (sentencia)


Estado 61

   40 sentencia: sentencia_do_until .

    $default  reduce usando la regla 40 (sentencia)


Estado 62

   38 sentencia: sentencia_entrada .

    $default  reduce usando la regla 38 (sentencia)


Estado 63

   39 sentencia: sentencia_salida .

    $default  reduce usando la regla 39 (sentencia)


Estado 64

   41 sentencia: sentencia_return .

    $default  reduce usando la regla 41 (sentencia)


Estado 65

   33 sentencia: expresion . PYC
   43 sentencia_lista: expresion . OPERLISTA PYC
   75 expresion: expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion

    PYC        desplazar e ir al estado 96
    OPERLISTA  desplazar e ir al estado 97
    MASMAS     desplazar e ir al estado 98
    ARROBA     desplazar e ir al estado 99
    ORLOG      desplazar e ir al estado 100
    ANDLOG     desplazar e ir al estado 101
    EQN        desplazar e ir al estado 102
    REL        desplazar e ir al estado 103
    PORPOR     desplazar e ir al estado 104
    BORRLIST   desplazar e ir al estado 105
    MASMENOS   desplazar e ir al estado 106
    MULDIV     desplazar e ir al estado 107


Estado 66

   85 expresion: llamada_funcion .

    $default  reduce usando la regla 85 (expresion)


Estado 67

   87 expresion: constante .

    $default  reduce usando la regla 87 (expresion)


Estado 68

   95 constante: lista .

    $default  reduce usando la regla 95 (constante)


Estado 69

   25 cabecera_argumentos: error .

    $default  reduce usando la regla 25 (cabecera_argumentos)


Estado 70

   28 parametro: TIPO . ID

    ID  desplazar e ir al estado 108


Estado 71

   22 cabecera_subprog: TIPO ID $@7 PARIZQ cabecera_argumentos . PARDER

    PARDER  desplazar e ir al estado 109


Estado 72

   23 cabecera_argumentos: parametros .
   26 parametros: parametros . COMA parametro

    COMA  desplazar e ir al estado 110

    $default  reduce usando la regla 23 (cabecera_argumentos)


Estado 73

   27 parametros: parametro .

    $default  reduce usando la regla 27 (parametros)


Estado 74

   63 id_cin: ID .

    $default  reduce usando la regla 63 (id_cin)


Estado 75

   60 sentencia_entrada: INPUT lista_id . PYC
   61 lista_id: lista_id . COMA id_cin

    PYC   desplazar e ir al estado 111
    COMA  desplazar e ir al estado 112


Estado 76

   62 lista_id: id_cin .

    $default  reduce usando la regla 62 (lista_id)


Estado 77

   69 expresion_cadena: CADENA .

    $default  reduce usando la regla 69 (expresion_cadena)


Estado 78

   86 expresion: ID .
   89 llamada_funcion: ID . PARIZQ argumentos PARDER

    PARIZQ  desplazar e ir al estado 92

    $default  reduce usando la regla 86 (expresion)


Estado 79

   64 sentencia_salida: OUTPUT lista_expresiones_o_cadena . PYC
   65 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expresion_cout

    PYC   desplazar e ir al estado 113
    COMA  desplazar e ir al estado 114


Estado 80

   66 lista_expresiones_o_cadena: expresion_cout .

    $default  reduce usando la regla 66 (lista_expresiones_o_cadena)


Estado 81

   67 expresion_cout: expresion_cadena .

    $default  reduce usando la regla 67 (expresion_cout)


Estado 82

   68 expresion_cadena: expresion .
   75 expresion: expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion

    MASMAS    desplazar e ir al estado 98
    ARROBA    desplazar e ir al estado 99
    ORLOG     desplazar e ir al estado 100
    ANDLOG    desplazar e ir al estado 101
    EQN       desplazar e ir al estado 102
    REL       desplazar e ir al estado 103
    PORPOR    desplazar e ir al estado 104
    BORRLIST  desplazar e ir al estado 105
    MASMENOS  desplazar e ir al estado 106
    MULDIV    desplazar e ir al estado 107

    $default  reduce usando la regla 68 (expresion_cadena)


Estado 83

   70 sentencia_return: RETURN expresion . PYC
   75 expresion: expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion

    PYC       desplazar e ir al estado 115
    MASMAS    desplazar e ir al estado 98
    ARROBA    desplazar e ir al estado 99
    ORLOG     desplazar e ir al estado 100
    ANDLOG    desplazar e ir al estado 101
    EQN       desplazar e ir al estado 102
    REL       desplazar e ir al estado 103
    PORPOR    desplazar e ir al estado 104
    BORRLIST  desplazar e ir al estado 105
    MASMENOS  desplazar e ir al estado 106
    MULDIV    desplazar e ir al estado 107


Estado 84

   49 sentencia_if: IF PARIZQ . $@9 expresion $@10 PARDER $@11 sentencia $@12 bloque_else

    $default  reduce usando la regla 45 ($@9)

    $@9  ir al estado 116


Estado 85

   59 sentencia_do_until: REPEAT $@16 . sentencia $@17 UNTIL PARIZQ expresion $@18 PARDER PYC

    error      desplazar e ir al estado 40
    INPUT      desplazar e ir al estado 41
    OUTPUT     desplazar e ir al estado 42
    RETURN     desplazar e ir al estado 43
    IF         desplazar e ir al estado 44
    REPEAT     desplazar e ir al estado 45
    WHILE      desplazar e ir al estado 46
    CONST      desplazar e ir al estado 47
    INIBLOQUE  desplazar e ir al estado 7
    CORIZQ     desplazar e ir al estado 48
    PARIZQ     desplazar e ir al estado 49
    DOLLAR     desplazar e ir al estado 50
    ID         desplazar e ir al estado 51
    MASMENOS   desplazar e ir al estado 52
    INTHASH    desplazar e ir al estado 53
    EXCL       desplazar e ir al estado 54

    bloque                ir al estado 55
    sentencia             ir al estado 117
    sentencia_asignacion  ir al estado 57
    sentencia_lista       ir al estado 58
    sentencia_if          ir al estado 59
    sentencia_while       ir al estado 60
    sentencia_do_until    ir al estado 61
    sentencia_entrada     ir al estado 62
    sentencia_salida      ir al estado 63
    sentencia_return      ir al estado 64
    expresion             ir al estado 65
    llamada_funcion       ir al estado 66
    constante             ir al estado 67
    lista                 ir al estado 68


Estado 86

   55 sentencia_while: WHILE PARIZQ . $@14 expresion $@15 PARDER sentencia

    $default  reduce usando la regla 53 ($@14)

    $@14  ir al estado 118


Estado 87

   75 expresion: expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion
   98 lista_expresiones: expresion .

    MASMAS    desplazar e ir al estado 98
    ARROBA    desplazar e ir al estado 99
    ORLOG     desplazar e ir al estado 100
    ANDLOG    desplazar e ir al estado 101
    EQN       desplazar e ir al estado 102
    REL       desplazar e ir al estado 103
    PORPOR    desplazar e ir al estado 104
    BORRLIST  desplazar e ir al estado 105
    MASMENOS  desplazar e ir al estado 106
    MULDIV    desplazar e ir al estado 107

    $default  reduce usando la regla 98 (lista_expresiones)


Estado 88

   96 lista: CORIZQ lista_expresiones . CORDER
   97 lista_expresiones: lista_expresiones . COMA expresion

    CORDER  desplazar e ir al estado 119
    COMA    desplazar e ir al estado 120


Estado 89

   71 expresion: PARIZQ expresion . PARDER
   75          | expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion

    PARDER    desplazar e ir al estado 121
    MASMAS    desplazar e ir al estado 98
    ARROBA    desplazar e ir al estado 99
    ORLOG     desplazar e ir al estado 100
    ANDLOG    desplazar e ir al estado 101
    EQN       desplazar e ir al estado 102
    REL       desplazar e ir al estado 103
    PORPOR    desplazar e ir al estado 104
    BORRLIST  desplazar e ir al estado 105
    MASMENOS  desplazar e ir al estado 106
    MULDIV    desplazar e ir al estado 107


Estado 90

   44 sentencia_lista: DOLLAR expresion . PYC
   75 expresion: expresion . ARROBA expresion
   76          | expresion . ANDLOG expresion
   77          | expresion . ORLOG expresion
   78          | expresion . EQN expresion
   79          | expresion . MASMENOS expresion
   80          | expresion . MULDIV expresion
   81          | expresion . PORPOR expresion
   82          | expresion . BORRLIST expresion
   83          | expresion . REL expresion
   84          | expresion . MASMAS expresion ARROBA expresion

    PYC       desplazar e ir al estado 122
    MASMAS    desplazar e ir al estado 98
    ARROBA    desplazar e ir al estado 99
    ORLOG     desplazar e ir al estado 100
    ANDLOG    desplazar e ir al estado 101
    EQN       desplazar e ir al estado 102
    REL       desplazar e ir al estado 103
    PORPOR    desplazar e ir al estado 104
    BORRLIST  desplazar e ir al estado 105
    MASMENOS  desplazar e ir al estado 106
    MULDIV    desplazar e ir al estado 107


Estado 91

   42 sentencia_asignacion: ID ASIGN . expresion PYC
